@@ -1,6 +1,6 @@
-      subroutine esp_grid(x,q,g)
+      subroutine esp_grid(x,q,g,v)
 c
-c $Id: esp_grid.F,v 1.2 1998-08-13 21:35:19 d3j191 Exp $
+c $Id: esp_grid.F,v 1.3 1998-12-23 19:41:22 d3j191 Exp $
 c
       implicit none
 c
@@ -11,9 +11,22 @@ c
 #include "mafdecls.fh"
 #include "msgids.fh"
 c
-      real*8 x(3,natoms),q(natoms),g(3,mxgrid)
+      real*8 x(3,natoms),q(natoms),g(3,mxgrid),v(mxgrid)
       real*8 d,dmin,rcut2,rad2
-      integer i,ix,iy,iz,ia
+      integer i,ix,iy,iz,ia,j
+c
+      if(newgrd.eq.0) then
+      if(me.eq.0) then
+      call util_file_name('grid',.false.,.false.,grdfil)
+      open(unit=lfngrd,file=grdfil,form='formatted',status='old')
+      read(lfngrd,'(i10)') ngrid
+      do 10 i=1,ngrid
+      write(lfngrd,'(4f20.10)') (g(j,i),j=1,3),v(i)
+   10 continue
+      close(unit=lfngrd)
+      endif
+      call ga_brdcst(mre_013,v,ngrid*ma_sizeof(mt_dbl,1,mt_byte),0)
+      else
 c
 c     determine actual number of grid points
 c
@@ -40,11 +53,13 @@ c
 cx      write(*,'(i5,7f12.6)') ngrid,(x(i,1),i=1,3),
 cx     + (g(i,ngrid),i=1,3),sqrt(dmin)
       ngrid=ngrid+1
+      if(ngrid.gt.mxgrid) call errquit('Not enough memory available',0)
       endif
     3 continue
     2 continue
     1 continue
       ngrid=ngrid-1
+      endif
       endif
 c
 c     broadcast grid to other nodes
@@ -54,5 +69,29 @@ c
       call ga_brdcst(mre_002,g,3*ngrid*ma_sizeof(mt_dbl,1,mt_byte),0)
       endif
 c
+c     determine gridpoints handled by current node
+c
+      if(np.gt.1) then
+      ngfr=me*(ngrid/np)+1
+      ngto=(me+1)*(ngrid/np)
+      if(me.eq.np) ngto=ngrid
+      else
+      ngfr=1
+      ngto=ngrid
+      endif
+c
       return
       end
+
+
+
+
+
+
+
+
+
+
+
+
+
